2008-09-12  Werner Koch  <wk@g10code.com>

	* rsa.c (extract_a_from_sexp): New.
	(selftest_encr_1024): Check that the ciphertext does not match the
	plaintext.

2008-09-11  Werner Koch  <wk@g10code.com>

	* rsa.c (_gcry_rsa_decrypt): Return an error instead of calling
	BUG in case of a practically impossible condition.
	(sample_secret_key, sample_public_key): New.
	(selftest_sign_1024, selftest_encr_1024): New.
	(selftests_rsa): Implement tests.
	* dsa.c (sample_secret_key, sample_public_key): New.
	(selftest_sign_1024): New.
	(selftests_dsa): Implement tests.

2008-09-09  Werner Koch  <wk@g10code.com>

	* hmac-tests.c (selftests_sha1): Add tests.
	(selftests_sha224, selftests_sha384, selftests_sha512): Make up tests.

	* hash-common.c, hash-common.h: New.
	* sha1.c (selftests_sha1): Add 3 tests.
	* sha256.c (selftests_sha256, selftests_sha224): Ditto.
	* sha512.c (selftests_sha512, selftests_sha384): Ditto.

2008-08-29  Werner Koch  <wk@g10code.com>

	* pubkey.c (gcry_pk_get_keygrip): Remove the special case for RSA
	and check whether a custom computation function has been setup.
	* rsa.c (compute_keygrip): New.
	(_gcry_pubkey_extraspec_rsa): Setup this function.
	* ecc.c (compute_keygrip): New.
	(_gcry_pubkey_extraspec_ecdsa): Setup this function.

2008-08-28  Werner Koch  <wk@g10code.com>

	* cipher.c (cipher_decrypt, cipher_encrypt): Return an error if
	mode NONE is used.
	(gcry_cipher_open): Allow mode NONE only with a debug flag set and
	if not in FIPS mode.

2008-08-26  Werner Koch  <wk@g10code.com>

	* pubkey.c (pubkey_generate): Add arg KEYGEN_FLAGS.
	(gcry_pk_genkey): Implement new parameter "transient-key" and
	pass it as flags to pubkey_generate.
	(pubkey_generate): Make use of an ext_generate function.
	* rsa.c (generate): Add new arg transient_key and pass appropriate
	args to the prime generator.
	(_gcry_rsa_generate): Factor all code out to ...
	(rsa_generate): .. new func with extra arg KEYGEN_FLAGS.